tests/fixtures/valid/hello_world.mmd
flowchart TD
    Start --> A[println 'Hello, World!']
    A --> End
