tests/fixtures/invalid/dual_edge_label.mmd
flowchart TD
    Start --> A{x > 0?}
    A --Yes--> |Yes| B[println x]
    A -->|No| End
    B --> End
